[package]
name = "ActixWebTaskService"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
aws-config = "1.5.0"
aws-sdk-dynamodb = "1.29.0"
derive_more = "0.99.17"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.202", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.2"
uuid = "1.8.0"

